--- a/flaskr/templates/reports/report.html
+++ b/flaskr/templates/reports/report.html
@@ -28,7 +28,7 @@ body {font-family: "Lato", sans-serif}
     <a class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large w3-right" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
     <a href="/home" class="w3-bar-item w3-button w3-padding-large">HOME</a>
     <a href="auth/login" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Text Comparison</a>
-    <a href="./stylometry/stylo" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Stylometry</a>
+    <a href="#tour" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Stylometry</a>
     <a href="#contact" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Reports</a>
     <div class="w3-dropdown-hover w3-hide-small">
       <button class="w3-padding-large w3-button" title="More">MORE <i class="fa fa-caret-down"></i></button>     
@@ -49,6 +49,9 @@ body {font-family: "Lato", sans-serif}
 </div>
 
 <!-- Page content -->
+
+
+
 
   
 <!-- End Page Content -->
