--- a/flaskr/static/text.css
+++ b/flaskr/static/text.css
@@ -7,6 +7,8 @@ p {align-items: center; justify-content: center; display: flex; font-weight: bol
     text-align: center;
     background-color: rgb(197, 202, 200);
     width: 50%;
+    height: auto;
+    border: 3px solid black;
 }
 
 .submit{
