--- a/flaskr/templates/auth/login.html
+++ b/flaskr/templates/auth/login.html
@@ -1,15 +1,20 @@
 {% extends 'base.html' %}
 
 {% block header %}
-  <h1>{% block title %}Log In{% endblock %}</h1>
+  <h1 style="justify-content: center; display: flex;">{% block title %}Log In{% endblock %}</h1>
 {% endblock %}
 
 {% block content %}
+<div class="form-center">
   <form method="post">
     <label for="username">Username</label>
     <input name="username" id="username" required>
     <label for="password">Password</label>
     <input type="password" name="password" id="password" required>
-    <input type="submit" value="Log In">
+
+    <input type="submit" value="Log In" style="align-self: center;">
+    
   </form>
+</div>
+  
 {% endblock %}
