--- a/flaskr/templates/auth/register.html
+++ b/flaskr/templates/auth/register.html
@@ -5,11 +5,18 @@
 {% endblock %}
 
 {% block content %}
+  
+<div class="form-center">
   <form method="post">
     <label for="username">Username</label>
     <input name="username" id="username" required>
     <label for="password">Password</label>
     <input type="password" name="password" id="password" required>
-    <input type="submit" value="Register">
+    <label for="password2">Confirm Password</label>
+    <input type="password" name="password2" id="password2" required>
+
+    <input type="submit" value="Register" style="align-self: center;">
   </form>
+</div>
+
 {% endblock %}
