Positioned footers on pages

--- a/flaskr/templates/reports/report.html
+++ b/flaskr/templates/reports/report.html
@@ -72,11 +72,12 @@ body {font-family: "Lato", sans-serif}
 <!-- End Page Content -->
 </div>
 
-
 <!-- Footer -->
-<footer class="w3-container w3-padding-64 w3-center w3-opacity w3-light-grey w3-xlarge">
-  <p class="w3-medium">Powered by <a href="https://github.com/ISE-Project-2022/SimiLabs_2022" target="_blank"> SimiLabs 2022</a></p>
-</footer>
+<div id="footer">
+  <footer class="w3-container w3-padding-64 w3-center w3-opacity w3-light-grey w3-xlarge">
+    <p class="w3-medium">Powered by <a href="https://github.com/ISE-Project-2022/SimiLabs_2022" target="_blank"> SimiLabs 2022</a></p>
+  </footer>
+</div>
 
 <script>
 // Automatic Slideshow - change image every 4 seconds
