--- a/flaskr/static/home.css
+++ b/flaskr/static/home.css
@@ -1,2 +1,3 @@
 h1 {align-items: center; justify-content: center; display: flex; font-weight: bold;}
 p {align-items: center; justify-content: center; display: flex; font-weight: bold;}
+#footer {position:absolute;bottom:0;width:100%;background: linear-gradient(89deg, #FF5EDF 20%, #04C8DE 100%);}
