--- a/flaskr/static/text.css
+++ b/flaskr/static/text.css
@@ -18,3 +18,11 @@ p {align-items: center; justify-content: center; display: flex; font-weight: bol
 .input{
     margin-left: 13em;
 }
+
+#footer {
+    position:absolute;
+    bottom:0;
+    width:100%;
+    /* background: linear-gradient(to right, #377ba8 , grey); */
+    background: linear-gradient(89deg, #FF5EDF 20%, #04C8DE 100%);
+ }
