Added report html files

--- a/flaskr/templates/reports/styloReport.html
+++ b/flaskr/templates/reports/styloReport.html
@@ -1,8 +1,8 @@
-{% extends 'baseNav.html' %}
+{% extends 'baseReport.html' %}
 
 {% block header %}
 
-<title>{% block title %} Home {% endblock %}</title>
+<title>{% block title %} Stylometry Report {% endblock %}</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -25,7 +25,9 @@ body {font-family: "Lato", sans-serif}
 <br>
 <br>
 
-<h1> Reports</h1>
+
+
+<h1> Quick Text Report</h1>
 <p> Choose a file to continue working on:</p>
 
 <!-- End Page Content -->
