--- a/flaskr/templates/text/ExtensiveText.html
+++ b/flaskr/templates/text/ExtensiveText.html
@@ -25,6 +25,7 @@ body {font-family: "Lato", sans-serif}
 <br>
 <br>
 
+<h1> Extensive Text Compare </h1>
 
 <div class="form-center">
   <form method="post" action="/ExtensiveText" enctype="multipart/form-data">
