--- a/flaskr/templates/text/QuickText.html
+++ b/flaskr/templates/text/QuickText.html
@@ -25,6 +25,8 @@ body {font-family: "Lato", sans-serif}
 <br>
 <br>
 
+<h1> Quick Text Compare </h1>
+
 <div class="form-center">
   <form method="post" action="/QuickText" enctype="multipart/form-data">
     <dl>
@@ -36,8 +38,8 @@ body {font-family: "Lato", sans-serif}
         </p>
     </dl>
     <p>
-          <input type="submit" value="Submit">
-      </p>
+        <input type="submit" value="Submit">
+    </p>
 </form>
 </div>
 </form>
