Changed Nav Bar color

--- a/flaskr/templates/reports/quickReport.html
+++ b/flaskr/templates/reports/quickReport.html
@@ -25,10 +25,21 @@ body {font-family: "Lato", sans-serif}
 <br>
 <br>
 
-
-
 <h1> Quick Text Report</h1>
-<p> Choose a file to continue working on:</p>
+<!-- Test Doc -->
+<div>
+
+</div>
+
+<!-- Suspect Doc -->
+<div>
+
+</div>
+
+<!-- Report -->
+<div>
+
+</div>
 
 <!-- End Page Content -->
 
