--- a/flaskr/static/baseReport.css
+++ b/flaskr/static/baseReport.css
@@ -4,7 +4,8 @@
 
 .button {
     border-radius: 4px;
-    background-color: #f4511e;
+    /* background-color: #f4511e; */
+    background-color: purple;
     border: none;
     color: #FFFFFF;
     text-align: center;
