Pushed some faulty frontend code

--- a/flaskr/templates/baseNav.html
+++ b/flaskr/templates/baseNav.html
@@ -33,7 +33,7 @@
       <button class="w3-padding-large w3-button" title="More">MORE <i class="fa fa-caret-down"></i></button>     
       <div class="w3-dropdown-content w3-bar-block w3-card-4">
         <a href="/help" class="w3-bar-item w3-button">Help</a>
-        <a href="{{ url_for('auth.logout') }}" class="w3-bar-item w3-button">Log Out</a>
+        <a href="{{ url_for('auth.login') }}" class="w3-bar-item w3-button">Log Out</a>
       </div>
     </div>
 
