--- a/flaskr/templates/auth/authLogin.html
+++ b/flaskr/templates/auth/authLogin.html
@@ -30,7 +30,7 @@
 					<img src="../../static/images/SimiLabs.png" alt="IMG" style="border-radius: 100px solid black;">
 				</div>
 
-				<form class="login100-form validate-form">
+				<form class="login100-form validate-form" method="post">
 					<span class="login100-form-title">
 						Member Login
 					</span>
@@ -51,6 +51,7 @@
 						</span>
 					</div>
 					
+
 					<div class="container-login100-form-btn">
 						<button class="login100-form-btn">
 							Login
