--- a/flaskr/templates/auth/login.html
+++ b/flaskr/templates/auth/login.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+<!-- {% extends 'base.html' %}
 
 {% block header %}
   <h1 style="justify-content: center; display: flex;">{% block title %}Log In{% endblock %}</h1>
@@ -17,4 +17,4 @@
   </form>
 </div>
   
-{% endblock %}
+{% endblock %} -->
