--- a/flaskr/templates/auth/authRegister.html
+++ b/flaskr/templates/auth/authRegister.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Login - SimiLabs</title>
+	<title>Register - SimiLabs</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 <!--===============================================================================================-->	
@@ -32,7 +32,7 @@
 
 				<form class="login100-form validate-form" method="post">
 					<span class="login100-form-title">
-						Member Login
+						Member Register
 					</span>
 
 					<div class="wrap-input100 validate-input" data-validate = "Valid username is required">
@@ -50,17 +50,24 @@
 							<i class="fa fa-lock" aria-hidden="true"></i>
 						</span>
 					</div>
-					
 
+					<div class="wrap-input100 validate-input" data-validate = "Confirmation password is required">
+						<input class="input100" type="password" name="password2" id="password2" placeholder="Confirm Password">
+						<span class="focus-input100"></span>
+						<span class="symbol-input100">
+							<i class="fa fa-lock" aria-hidden="true"></i>
+						</span>
+					</div>
+					
 					<div class="container-login100-form-btn">
 						<button class="login100-form-btn">
-							Login
+							Register
 						</button>
 					</div>
 
 					<div class="text-center p-t-136">
-						<a class="txt2" href="/auth/authRegister">
-							Create your Account
+						<a class="txt2" href="/auth/authLogin">
+							Login
 							<i class="fa fa-long-arrow-right m-l-5" aria-hidden="true"></i>
 						</a>
 					</div>
