--- a/flaskr/templates/baseNav.html
+++ b/flaskr/templates/baseNav.html
@@ -30,12 +30,14 @@
     <a href="/reports" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Reports</a>
 
     <div class="w3-dropdown-hover w3-hide-small">
-      <button class="w3-padding-large w3-button" title="More">MORE <i class="fa fa-caret-down"></i></button>     
+      <button class="w3-padding-large w3-button" title="More"> MORE <i class="fa fa-caret-down"></i></button>     
       <div class="w3-dropdown-content w3-bar-block w3-card-4">
         <a href="/help" class="w3-bar-item w3-button">Help</a>
         <a href="{{ url_for('auth.login') }}" class="w3-bar-item w3-button">Log Out</a>
       </div>
     </div>
+
+    <span style="float: right; margin-top: 12px; margin-right: 15px; ">Welcome, {{ g.user['username'] }} </span>
 
 
   </div>
