--- a/flaskr/templates/text/QuickText.html
+++ b/flaskr/templates/text/QuickText.html
@@ -32,11 +32,20 @@ body {font-family: "Lato", sans-serif}
     <dl>
         <p>
             <p>Upload Source Document</p>
-            <input type="file" name="file" autocomplete="off" required class="input">
+            <input type="file" name="file1" autocomplete="off" required class="input">
             <p>Upload Comparison Document</p>
             <input type="file" name="file2" autocomplete="off" required class="input">
         </p>
     </dl>
+    <h5>Algorithm</h5>
+              <input type="radio" name="algorithm" value="lines" checked> Lines<br>
+              <input type="radio" name="algorithm" value="sentences"> Sentences<br>
+              <input type="radio" name="algorithm" value="substrings"> Substrings<br>
+            <br>
+
+            <h5>Length (for Substrings algorithm)</h5>
+              <input type="text" name="length">
+            <br><br>
     <p>
         <input type="submit" value="Submit">
     </p>
