--- a/flaskr/templates/baseReport.html
+++ b/flaskr/templates/baseReport.html
@@ -6,9 +6,9 @@
 {% block header %}
 
 {% endblock %}
+  <link rel="stylesheet" href="/static/baseReport.css">
 </head>
 
-<link rel="stylesheet" href="/static/baseReport.css">
 
 <body>
 
@@ -36,3 +36,6 @@
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js"></script>
+
+</body>
+</html>
