Fixed the problem where divs cant be next to each other

--- a/flaskr/templates/reports/quickReport.html
+++ b/flaskr/templates/reports/quickReport.html
@@ -34,16 +34,14 @@ body {font-family: "Lato", sans-serif}
 
 <!-- Suspect Doc -->
 <div class="container-fluid">
-    <div class="row" style="width: 50%">
-        <div class="col-6" style="border: 3px solid black;">
+        <div class="col-6" style="border: 3px solid black; margin: 5px 10px 5px 10px;float: left; ">
             <pre>{{ file1 | safe }}</pre>
         </div>
-        
+
         <!-- Report -->
-        <div class="col-6" style="border: 3px solid black;">
+        <div class="col-6" style="border: 3px solid black; margin: 5px 10px 5px 10px; float: right;">
             <pre>{{ file2 | safe }}</pre>
         </div>
-    </div>
 </div>
 
 
