--- a/flaskr/templates/text/QuickText.html
+++ b/flaskr/templates/text/QuickText.html
@@ -38,14 +38,31 @@ body {font-family: "Lato", sans-serif}
             <input type="file" name="file2" autocomplete="off" required class="input">
         </p>
     </dl>
+
+    <!-- Script to disable substring textbox unless the radiobutton is checked-->
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+    <script type="text/javascript">
+        $(function () {
+            $("input[name='algorithm']").click(function () {
+                if ($("#chkSubstring").is(":checked")) {
+                    $("#txtSubstring").removeAttr("disabled");
+                    $("#txtSubstring").focus();
+                } else {
+                    $("#txtSubstring").attr("disabled", "disabled");
+                }
+            });
+        });
+    </script>
+
+
     <h5>Algorithm</h5>
               <input type="radio" name="algorithm" value="lines" checked> Lines<br>
               <input type="radio" name="algorithm" value="sentences"> Sentences<br>
-              <input type="radio" name="algorithm" value="substrings"> Substrings<br>
+              <input type="radio" name="algorithm" value="substrings" id="chkSubstring"> Substrings<br>
             <br>
 
             <h5>Length (for Substrings algorithm)</h5>
-              <input type="text" name="length">
+              <input type="text" name="length" id="txtSubstring">
             <br><br>
     <p>
         <input type="submit" value="Submit">
