Added different types of docs that works

--- a/flaskr/templates/text/QuickText.html
+++ b/flaskr/templates/text/QuickText.html
@@ -62,7 +62,7 @@ body {font-family: "Lato", sans-serif}
             <br>
 
             <h5>Length (for Substrings algorithm)</h5>
-              <input type="text" name="length" id="txtSubstring">
+              <input type="text" name="length" id="txtSubstring" disabled="true">
             <br><br>
     <p>
         <input type="submit" value="Submit">
