--- a/flaskr/templates/auth/authRegister.html
+++ b/flaskr/templates/auth/authRegister.html
@@ -41,6 +41,7 @@
 						<span class="symbol-input100">
 							<i class="fa fa-envelope" aria-hidden="true"></i>
 						</span>
+						<div class="msg">{{ msg }}</div>
 					</div>
 
 					<div class="wrap-input100 validate-input" data-validate = "Password is required">
@@ -49,6 +50,7 @@
 						<span class="symbol-input100">
 							<i class="fa fa-lock" aria-hidden="true"></i>
 						</span>
+						<div class="msg">{{ msg }}</div>
 					</div>
 
 					<div class="wrap-input100 validate-input" data-validate = "Confirmation password is required">
@@ -57,6 +59,7 @@
 						<span class="symbol-input100">
 							<i class="fa fa-lock" aria-hidden="true"></i>
 						</span>
+						<div class="msg">{{ msg }}</div>
 					</div>
 					
 					<div class="container-login100-form-btn">
