--- a/flaskr/templates/text/QuickText.html
+++ b/flaskr/templates/text/QuickText.html
@@ -11,9 +11,8 @@
 <link rel="stylesheet" href="/static/text.css">
 
 <style>
-body {font-family: "Lato", sans-serif}
+body{font-family: "Lato",sans-serif, height: 100%, margin: 0}
 .mySlides {display: none}
-
 </style>
 
 {% endblock %}
