Tried adding WordCloud: NOT WORKING

--- a/flaskr/templates/baseReport.html
+++ b/flaskr/templates/baseReport.html
@@ -23,7 +23,10 @@
 
     <button class="button buttonstyle"> <span> Save </span>  </button>
     <button class="button buttonstyle"> <span> Upload </span> </button>
-    
+    <!--Call the WordCloud.py wordCloud function-->
+    <button class="button buttonstyle" onclick="exec('python WordCloud.py');"> <span> Word Cloud </span>  </button>
+
+
   </div>
 </div>
 
