Applied hotfix to wordcloud (still buggy)

--- a/flaskr/templates/reports/quickReport.html
+++ b/flaskr/templates/reports/quickReport.html
@@ -44,6 +44,10 @@ body {font-family: "Lato", sans-serif}
         </div>
 </div>
 
+<div>
+    <img src={{url_for('flaskr',filename = image)}} alt={{ image }} style="width:50%;height:50%;">
+</div>
+
 
 <!-- End Page Content -->
 
