--- a/flaskr/static/text.css
+++ b/flaskr/static/text.css
@@ -21,7 +21,7 @@ p {align-items: center; justify-content: center; display: flex; font-weight: bol
 
 #footer {
     position:fixed;
-    bottom: 0;
+    /* bottom: 0; */
     width:100%;
     /* background: linear-gradient(to right, #377ba8 , grey); */
     background: linear-gradient(89deg, #FF5EDF 20%, #04C8DE 100%);
