Added wordcloud functionality to QuickText (image does not display)

--- a/flaskr/templates/reports/quickReport.html
+++ b/flaskr/templates/reports/quickReport.html
@@ -45,7 +45,7 @@ body {font-family: "Lato", sans-serif}
 </div>
 
 <div>
-    <img src={{url_for('flaskr',filename = image)}} alt={{ image }} style="width:50%;height:50%;">
+    <img src={{ image }} alt={{image}} style="width:50%;height:50%;">
 </div>
 
 
