Updated wordcloud functionality (image still not loading)

--- a/flaskr/templates/reports/quickReport.html
+++ b/flaskr/templates/reports/quickReport.html
@@ -44,8 +44,8 @@ body {font-family: "Lato", sans-serif}
         </div>
 </div>
 
-<div>
-    <img src={{ image }} alt={{image}} style="width:50%;height:50%;">
+<div style="display: flex;justify-content: center;align-items: center;">
+    <img src={{image}} alt={{image}} style="width:150px;height:150px;">
 </div>
 
 
