--- a/flaskr/templates/text/ExtensiveText.html
+++ b/flaskr/templates/text/ExtensiveText.html
@@ -11,7 +11,7 @@
 <link rel="stylesheet" href="/static/text.css">
 
 <style>
-body {font-family: "Lato", sans-serif}
+body {font-family: "Lato", sans-serif;}
 .mySlides {display: none}
 </style>
 
