Tried adding new WordCLoud features

--- a/flaskr/templates/reports/quickReport.html
+++ b/flaskr/templates/reports/quickReport.html
@@ -45,7 +45,7 @@ body {font-family: "Lato", sans-serif}
 </div>
 
 <div style="display: flex;justify-content: center;align-items: center;">
-    <img src={{ image }} alt="WordCloud.png" style="width:150px;height:150px;">
+    <img src={{ image }} alt={{ image }} style="width:150px;height:150px;">
 </div>
 
 
