--- a/flaskr/templates/reports/quickReport.html
+++ b/flaskr/templates/reports/quickReport.html
@@ -43,9 +43,10 @@ body {font-family: "Lato", sans-serif}
             <pre>{{ file2 | safe }}</pre>
         </div>
 </div>
-
+<br>
+<br>
 <div style="display: flex;justify-content: center;align-items: center;">
-    <img src={{ image }} alt={{ image }} style="width:150px;height:150px;">
+    <img src="../../static/images/WordCloud/wordcloud.png" alt="WordCloud.png" style="width:350px;height:180px;border: 5px solid purple;">
 </div>
 
 
