--- a/flaskr/templates/auth/authRegister.html
+++ b/flaskr/templates/auth/authRegister.html
@@ -41,7 +41,7 @@
 						<span class="symbol-input100">
 							<i class="fa fa-envelope" aria-hidden="true"></i>
 						</span>
-						<div class="msg">{{ msg }}</div>
+						<div class="msg" style="color: red;text-align: center;">{{ msg }}</div>
 					</div>
 
 					<div class="wrap-input100 validate-input" data-validate = "Password is required">
@@ -50,7 +50,7 @@
 						<span class="symbol-input100">
 							<i class="fa fa-lock" aria-hidden="true"></i>
 						</span>
-						<div class="msg">{{ msg }}</div>
+						<div class="msg" style="color: red;text-align: center;">{{ msg }}</div>
 					</div>
 
 					<div class="wrap-input100 validate-input" data-validate = "Confirmation password is required">
@@ -59,7 +59,7 @@
 						<span class="symbol-input100">
 							<i class="fa fa-lock" aria-hidden="true"></i>
 						</span>
-						<div class="msg">{{ msg }}</div>
+						<div class="msg" style="color: red;text-align: center;">{{ msg }}</div>
 					</div>
 					
 					<div class="container-login100-form-btn">
