--- a/flaskr/templates/reports/quickReport.html
+++ b/flaskr/templates/reports/quickReport.html
@@ -46,6 +46,11 @@ body {font-family: "Lato", sans-serif}
 <br>
 <br>
 <div style="display: flex;justify-content: center;align-items: center;">
+    <span>Percentage similarity: {{ similarity }}%</span>
+</div>
+<br>
+<br>
+<div style="display: flex;justify-content: center;align-items: center;">
     <img src="../../static/images/WordCloud/wordcloud.png" alt="WordCloud.png" style="width:350px;height:180px;border: 5px solid purple;">
 </div>
 
