Change colors based on QuickText similarity value

--- a/flaskr/templates/reports/quickReport.html
+++ b/flaskr/templates/reports/quickReport.html
@@ -46,7 +46,7 @@ body {font-family: "Lato", sans-serif}
 <br>
 <br>
 <div style="display: flex;justify-content: center;align-items: center;">
-    <span>Percentage similarity: {{ similarity }}%</span>
+    <span>Percentage similarity: <p style="color: {{color}};">{{ similarity }}%</p></span>
 </div>
 <br>
 <br>
