--- a/flaskr/templates/text/QuickText.html
+++ b/flaskr/templates/text/QuickText.html
@@ -47,9 +47,10 @@ body{font-family: "Lato", sans-serif; height: 100%; margin: 0;}
               <input type="radio" name="algorithm" value="sentences"> Sentences<br>
               <input type="radio" name="algorithm" value="substrings" id="chkSubstring"> Substrings<br>
             <br>
+            HELLO WORLD!
             <h5>Text Similarity Algorithm</h5>
-            <input type="radio" name="textsimilarity" value="Cosine">Cosine<br>
-            <input type="radio" name="textsimilarity" value="Jaccard">Jaccard<br>
+            <input type="radio" name="textsimilarity" value="cosine">Cosine<br>
+            <input type="radio" name="textsimilarity" value="jaccard" checked>Jaccard<br>
 
             <h5>Length (for Substrings algorithm)</h5>
               <input type="text" name="length" id="txtSubstring" disabled="true">
