Added metadata extraction functions

--- a/flaskr/templates/reports/quickReport.html
+++ b/flaskr/templates/reports/quickReport.html
@@ -48,6 +48,9 @@ body {font-family: "Lato", sans-serif}
 <div style="display: flex;justify-content: center;align-items: center;">
     <span>Percentage similarity: <p style="color: {{color}};">{{ similarity }}%</p></span>
 </div>
+<div>
+    <p style="text-align: center;">{{metadata}}</p>
+</div>
 <br>
 <br>
 <div style="display: flex;justify-content: center;align-items: center;">
