--- a/flaskr/templates/reports/quickReport.html
+++ b/flaskr/templates/reports/quickReport.html
@@ -90,9 +90,21 @@ body {font-family: "Lato", sans-serif}
 
 <br>
 <br>
-<div style="display: flex;justify-content: center;align-items: center;">
-    <img src="../../static/images/WordCloud/wordcloud.png" alt="WordCloud.png" style="width:350px;height:180px;border: 5px solid purple;">
+
+
+<div style="display: flex;justify-content: center;align-items: center; border: 3px solid black;" >
+  <div style="margin-left: 90px">
+    <h2 style="float: right;margin-right: 7em"> Suspect Word Cloud </h1>
+    <img src="../../static/images/WordCloud/wordcloud.png" alt="WordCloud.png" style="display: block;margin-left: auto;margin-right: auto;width: 50%;" >
+  </div>
+  <div>
+    <h2  style="float: left;margin-left: 7em"> Comparison Word Cloud </h1>
+    <img src="../../static/images/WordCloud/wordcloud2.png" alt="WordCloud2.png" style="display: block;margin-left: auto;margin-right: auto;width: 50%;">
+  </div>
 </div>
+
+<!--<img src="../../static/images/WordCloud/wordcloud2.png" alt="WordCloud2.png" style="width:350px;height:180px;border: 4px solid purple;margin-left: 12em">-->
+  
 
 
 <!-- End Page Content -->
