--- a/flaskr/static/baseReport.css
+++ b/flaskr/static/baseReport.css
@@ -44,7 +44,7 @@
 
   div.container-fluid, div.row, div.col, div.jumbotron
 {
-    height: 100%;
+    height: 100vh;
     display: flex;
     justify-content: center;
     
