--- a/flaskr/templates/reports/quickReport.html
+++ b/flaskr/templates/reports/quickReport.html
@@ -78,12 +78,12 @@ body {font-family: "Lato", sans-serif}
 
 <!-- Suspect Doc -->
 <div class="container-fluid">
-        <div class="col-6" style="border: 3px solid black; margin: 5px 10px 5px 10px;float: left; ">
+        <div class="col-6" style="border: 3px solid black; margin: 5px 10px 5px 10px;float: left;background-color: white">
             <pre>{{ file1 | safe }}</pre>
         </div>
 
         <!-- Report -->
-        <div class="col-6" style="border: 3px solid black; margin: 5px 10px 5px 10px; float: right;">
+        <div class="col-6" style="border: 3px solid black; margin: 5px 10px 5px 10px; float: right;background-color: white">
             <pre>{{ file2 | safe }}</pre>
         </div>
 </div>
@@ -92,18 +92,21 @@ body {font-family: "Lato", sans-serif}
 <br>
 
 
-<div style="display: flex;justify-content: center;align-items: center; border: 3px solid black;" >
+<div style="display: flex;justify-content: center;align-items: center; border: 3px solid black; margin: 5px 200px 5px 200px; background-color: white" >
   <div style="margin-left: 90px">
-    <h2 style="float: right;margin-right: 7em"> Suspect Word Cloud </h1>
-    <img src="../../static/images/WordCloud/wordcloud.png" alt="WordCloud.png" style="display: block;margin-left: auto;margin-right: auto;width: 50%;" >
+    <h2 style="float: right;margin-right: 14em; font-weight: 700"> Suspect WordCloud </h1>
+    <img src="../../static/images/WordCloud/wordcloud.png" alt="WordCloud.png" style="display: block;margin-left: 200px;margin-right: 300px;width: 500px; height: 250px;margin-bottom: 25px" >
   </div>
   <div>
-    <h2  style="float: left;margin-left: 7em"> Comparison Word Cloud </h1>
-    <img src="../../static/images/WordCloud/wordcloud2.png" alt="WordCloud2.png" style="display: block;margin-left: auto;margin-right: auto;width: 50%;">
+    <h2  style="float: left;margin-left: 3em; font-weight: 700"> Comparison WordCloud </h1>
+    <img src="../../static/images/WordCloud/wordcloud2.png" alt="WordCloud2.png" style="display: block;margin-left: auto;margin-right: 300px;width: 500px;height: 250px;margin-bottom: 25px">
   </div>
+  <br>
 </div>
 
-<!--<img src="../../static/images/WordCloud/wordcloud2.png" alt="WordCloud2.png" style="width:350px;height:180px;border: 4px solid purple;margin-left: 12em">-->
+<br>
+<br>
+
   
 
 
