Final QuickText and QuickReport Finished and klaar

--- a/flaskr/templates/reports/quickReport.html
+++ b/flaskr/templates/reports/quickReport.html
@@ -37,7 +37,8 @@ body {font-family: "Lato", sans-serif}
 <br>
 <br>
 <div style="display: flex;justify-content: center;align-items: center;">
-  <span style="font-weight: 700">Percentage similarity: <p style="color: {{color}};">{{ similarity }}%</p></span>
+  <span style="font-weight: 700;font-size:1.5em;margin-right:5em">Percentage similarity Jaccard: <p style="color: {{colorJac}};">{{ similarityJac }}%</p></span>
+  <span style="font-weight: 700;font-size:1.5em;loat:right">Percentage similarity Cosine: <p style="color: {{colorCos}};">{{ similarityCos }}%</p></span>
 </div>
 <div class="w3-container">
   <table class="w3-table-all">
@@ -95,7 +96,7 @@ body {font-family: "Lato", sans-serif}
 <div style="display: flex;justify-content: center;align-items: center; border: 3px solid black; margin: 5px 200px 5px 200px; background-color: white" >
   <div style="margin-left: 90px">
     <h2 style="float: right;margin-right: 14em; font-weight: 700"> Suspect WordCloud </h1>
-    <img src="../../static/images/WordCloud/wordcloud.png" alt="WordCloud.png" style="display: block;margin-left: 200px;margin-right: 300px;width: 500px; height: 250px;margin-bottom: 25px" >
+    <img src="../../static/images/WordCloud/wordcloud.png" alt="WordCloud.png" style="display: block;margin-left: 210px;margin-right: 300px;width: 500px; height: 250px;margin-bottom: 25px" >
   </div>
   <div>
     <h2  style="float: left;margin-left: 3em; font-weight: 700"> Comparison WordCloud </h1>
