Changed some headings in QuickReport

--- a/flaskr/templates/reports/quickReport.html
+++ b/flaskr/templates/reports/quickReport.html
@@ -44,7 +44,7 @@ body {font-family: "Lato", sans-serif}
   <table class="w3-table-all">
       <tr>
         <th width: 100px>
-          Author
+          Creator / Original Author
         </th>
         <th>
           Date Created
