--- a/flaskr/templates/baseNav.html
+++ b/flaskr/templates/baseNav.html
@@ -49,9 +49,9 @@
 <!-- Footer -->
 <div id="footer">
     <footer class="w3-container w3-padding-64 w3-center w3-opacity w3-light-grey w3-xlarge">
-      <p class="w3-medium">Powered by <a href="https://github.com/ISE-Project-2022/SimiLabs_2022" target="_blank"> SimiLabs 2022</a></p>
+      <p class="w3-medium">Powered by &nbsp<a href="https://github.com/ISE-Project-2022/SimiLabs_2022" target="_blank"> SimiLabs 2022</a></p>
     </footer>
-  </div>
+</div>
   
   <script src="../../static/js/footer.js"></script>
   
