Added download QuickText Report functionality

--- a/flaskr/templates/baseReport.html
+++ b/flaskr/templates/baseReport.html
@@ -18,8 +18,8 @@
     <a class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large w3-right" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
     <a href="/home" class="w3-bar-item w3-button w3-padding-large">HOME</a>
     <a href="/reports" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Reports</a>
-
-    <button class="button buttonstyle"> <span> Save </span>  </button>
+    <!--send_file(pdfDownloadPath, as_attachment=True)-->
+    <a href="{{ url_for('download', filename="PlagiarismReport.pdf") }}"> <button class="button buttonstyle"> <span>  Save  </span>  </button> </a>
     <button class="button buttonstyle"> <span> Upload </span> </button>
   </div>
 </div>
