--- a/flaskr/templates/stylometry/stylo.html
+++ b/flaskr/templates/stylometry/stylo.html
@@ -8,7 +8,7 @@
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<link rel="stylesheet" href="/static/home.css">
+<link rel="stylesheet" href="../../static/text.css">
 
 <style>
 body {font-family: "Lato", sans-serif}
@@ -26,7 +26,23 @@ body {font-family: "Lato", sans-serif}
 <br>
 
 <h1> Stylometry</h1>
-<p> Choose a file to continue working on:</p>
+<!-- <p> Choose a file to continue working on:</p> -->
+
+<div class="form-center">
+    <form method="post" action="/ExtensiveText" enctype="multipart/form-data">
+      <dl>
+        <p>
+          <p>Upload Source Document</p>
+          <input type="file" name="files[]" multiple="true" autocomplete="off" required class="input">
+          <p>Upload Additional Document to Corpus (Optional) </p>
+          <input type="file" name="comparison" autocomplete="off" required class="input">
+        </p>
+      </dl>
+        <p>
+          <input type="submit" value="Submit">
+        </p>
+      </form>
+  </div>
 
 <!-- End Page Content -->
 
