--- a/flaskr/templates/text/ExtensiveText.html
+++ b/flaskr/templates/text/ExtensiveText.html
@@ -28,6 +28,7 @@ body {font-family: "Lato", sans-serif;}
 
 <h1> Extensive Text Compare </h1>
 
+<!--
 <div class="form-center">
   <form method="post" action="/ExtensiveText" enctype="multipart/form-data">
     <dl>
@@ -43,8 +44,20 @@ body {font-family: "Lato", sans-serif;}
       </p>
     </form>
 </div>
+-->
 
+<div class="form-center">
+  <form method="post" action="/ExtensiveText" enctype="multipart/form-data">
+    <h1> <u> Hanno se ding </u> </h1>
+    <h2> Student Number: </h2> <input type="text" id="stdNum" name="stdNum" placeholder="12345678"> 
+    <br>
+    <h2> Student Name: </h2> <input type="text" id="stdName" name="stdName" placeholder="Them Doe">
 
+    <p>
+      <input type="submit" value="Submit">
+    </p>
+  </form>
+</div>
 
 <!-- End Page Content -->
 
