Plotted Images on Stylometry Report

--- a/flaskr/templates/reports/styloReport.html
+++ b/flaskr/templates/reports/styloReport.html
@@ -46,18 +46,18 @@ body {font-family: "Lato", sans-serif;overflow-y: scroll;}
     <div class="column">
       <!-- <img src="img_mountains.jpg" alt="Mountains" style="width:100%"> -->
       <span><p>Calibration Curve</p></span>
-      <img src="../../static/images/WordCloud/wordcloud.png" alt="WordCloud.png" style="display: block;margin-left: 210px;margin-right: 300px;width: 500px; height: 250px;margin-bottom: 25px" >
+      <img src="../../static/images/ReportImages/calibration.png" alt="calibration.png" style="display: block;margin-left: 210px;margin-right: 300px;width: 500px; height: 250px;margin-bottom: 25px" >
     </div>
     <div class="column">
         <!-- <img src="img_mountains.jpg" alt="Mountains" style="width:100%"> -->
         <span><p>ROC (Receiver Operating Characteristic) Curve</p></span>
-        <img src="../../static/images/WordCloud/wordcloud.png" alt="WordCloud.png" style="display: block;margin-left: 210px;margin-right: 300px;width: 500px; height: 250px;margin-bottom: 25px" >
+        <img src="../../static/images/ReportImages/operating_curve.png" alt="operating_curve.png" style="display: block;margin-left: 210px;margin-right: 300px;width: 500px; height: 250px;margin-bottom: 25px" >
     </div>
 </div>
     <div class="row">
         <div class="column">
             <span><p style="text-align: center;"> PCA-Derived Coordinates</p></span>
-            <img src="../../static/images/WordCloud/wordcloud.png" alt="WordCloud.png" style="display: flex;margin-left: 600px;margin-right: 300px;width: 500px; height: 250px;margin-bottom: 25px">
+            <img src="../../static/images/ReportImages/plot.png" alt="plot.png" style="display: flex;margin-left: 600px;margin-right: 300px;width: 500px; height: 250px;margin-bottom: 25px">
         </div>
     </div>
 </div>
