Fixed user registration and login

--- a/flaskr/templates/stylometry/stylo.html
+++ b/flaskr/templates/stylometry/stylo.html
@@ -46,6 +46,8 @@ body {font-family: "Lato", sans-serif}
       </form>
   </div>
 
+  <div style="margin-bottom: 13.5vh;"></div>
+
 <!-- End Page Content -->
 
 {% endblock %}
